# eval

./: .gitignore  MT-bench使用指南.md  test_precondition.py  test_remove_thinking.py
IBench/: ADD_GENERATED_RESPONSE_TO_MESSAGES.md  COMPARE_MODELS_FIX.md  DIALOGUE_PIPELINE_GUIDE.md  FINAL_FIX_COMPLETE.md  FINAL_MAX_TURNS_FIX.md  FIXES_SUMMARY.md  FIX_COMPLETE.md  FIX_COMPLETE_REPORT.md  FIX_EXECUTION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MAX_TURNS_FIX_SUMMARY.md  MODEL_LOADING_COMPLETE.md  MODEL_LOADING_GUIDE.md  README.md  SOLUTION_A_COMPLETE.md  SYSTEM_PROMPT_UPDATE.md  TEST_NOW.md  TEST_PIPELINE_README.md  __init__.py  config.py  examples.py  process_json_files.py  pyproject.toml  requirements.txt  test_golden_history_pipeline.py  update_rules.py
IBench/IBench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
IBench/conversation/: conversation.py  user_simulator.py
IBench/deprecated/: README.md  interactive_eval.py
IBench/docs/: DYNAMIC_N_GUIDE.md  JSON_CONTEXT_EVALUATOR_GUIDE.md  PROJECT_STRUCTURE.md  system_prompts_README.md  system_prompts_collection.md  system_prompts_collection_old.md  评估Bench - 副本.md  评估Bench.md  评估体系说明.md
IBench/evaluator/: batch_evaluator.py  rule_evaluator.py
IBench/examples/: check_migration.py  dynamic_interactive_output_example.json  golden_history_output_example.json  golden_history_test_001.json  golden_history_test_002.json  (+3 more)
IFBench/: .coverage  .env.example  .gitignore  README.md  config.py  evaluation_lib.py  generate_responses.py  instructions.py  instructions_test.py  pyproject.toml  requirements.txt  run_eval.py
(+120 files in other folders)
