[project]
name = "ifbench"
version = "0.1.0"
description = "IFBench: A benchmark for precise instruction following evaluation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "absl-py",
    "langdetect",
    "nltk",
    "immutabledict",
    "emoji",
    "syllapy",
    "unicodedata2",
    "setuptools",
    "httpx",
    "tqdm",
    "pydantic>=2",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
